<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.RestaurantActivity"
    android:orientation="vertical">

 <ImageView
     android:id="@+id/imageHeader"
     android:layout_width="match_parent"
     android:layout_height="100dp"
     android:src="@drawable/gambar2"
     android:scaleType="fitXY"/>

 <TextView
     android:id="@+id/text_judul2"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:textStyle="bold"
     android:textColor="@color/hitam"
     android:text="@string/best_place"
     android:layout_marginTop="8dp"/>

 <TextView
     android:id="@+id/text_outlet2"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:text="@string/place"
     android:layout_marginTop="8dp"/>

 <TextView
     android:id="@+id/text_deskripsi"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:text="@string/gather"
     android:layout_marginTop="8dp"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"/>

 <GridView
     android:numColumns="2"
     android:id="@+id/gridView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 </GridView>
</LinearLayout>